[package]
name = "twosum0001"
version = "0.1.0"
authors = ["byy <664346241@qq.com>"]
edition = "2018"

[[bin]]
name = "twosum0001"
path = "src/twosum0001/main.rs"
doc = false

[[bin]]
name = "number_of_islands0200"
path = "src/number_of_islands0200/main.rs"
doc = false

[[bin]]
name = "kafkaconsumer_example"
path = "src/kafka/consumer/example-consume.rs"
doc = false

[[bin]]
name = "kafka_produce_example"
path = "src/kafka/produce/example-produce.rs"
doc = false

[[bin]]
name = "binaryTreeLevelOrder"
path = "src/binary_tree_level_order_traversal0107/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka="0.8"
env_logger = "0.4"