[package]
name = "twosum0001"
version = "0.1.0"
authors = ["byy <664346241@qq.com>"]
edition = "2018"

[[bin]]
name = "twosum0001"
path = "src/twosum0001/main.rs"
doc = false

[[bin]]
name = "numberOfIslands0200"
path = "src/twosum0001/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
